--- a/package.json
+++ b/package.json
@@ -95,12 +95,41 @@
     }
   },
   "dependencies": {
+    "@editorjs/checklist": "^1.4.0",
+    "@editorjs/code": "^2.8.0",
+    "@editorjs/delimiter": "^1.3.0",
+    "@editorjs/editorjs": "^2.26.5",
+    "@editorjs/embed": "^2.5.3",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/image": "^2.8.1",
+    "@editorjs/inline-code": "^1.4.0",
+    "@editorjs/link": "^2.5.0",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/marker": "^1.3.0",
+    "@editorjs/paragraph": "^2.9.0",
+    "@editorjs/quote": "^2.5.0",
+    "@editorjs/raw": "^2.4.0",
+    "@editorjs/simple-image": "^1.5.1",
+    "@editorjs/table": "^2.2.0",
+    "@editorjs/warning": "^1.3.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.8",
+    "crypto-js": "^4.1.1",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0"
+    "react-editor-js": "^2.1.0",
+    "react-router-dom": "^6.8.1",
+    "react-toastify": "^9.1.1",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@electron/notarize": "^1.2.3",
@@ -110,6 +139,7 @@
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/jest": "^29.4.0",
     "@types/node": "18.11.19",
     "@types/react": "^18.0.27",
@@ -246,5 +276,8 @@
       "src/main/**"
     ],
     "logLevel": "quiet"
+  },
+  "resolutions": {
+    "eslint-plugin-compat": "4.0.2"
   }
 }
